Изменения в спикерах, замена дефолтного фото и небольшие изменения в программе.

--- a/views/elems/spk.pug
+++ b/views/elems/spk.pug
@@ -15,7 +15,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/user.png")
                     .spkFio Бакурова Ангелина
-                    .spkPos Управляющий директор <br>начальник Офиса Agile-трансформации, Сбер
+                    .spkPos Управляющий директор-начальник Офиса Agile-трансформации, Сбер
 
                 .spkItem
                     .spkPhoto
@@ -43,7 +43,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/kesel.png")
                     .spkFio Кесель Иван
-                    .spkPos Chief Product Officer Продуктовой разработки направления &laquo;Эксперт&raquo;, ДомКлик от Сбера
+                    .spkPos Руководитель направления, Домклик, Сбер
 
                 .spkItem
                     .spkPhoto
@@ -85,7 +85,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/user.png")
                     .spkFio Мотина Юлия
-                    //.spkPos Коммуникации Офиса<br>Agile-трансформации Сбера
+                    .spkPos Управляющий директор-начальник Продуктового офиса, Сбер
 
                 .spkItem
                     .spkPhoto
@@ -118,9 +118,9 @@
                 .spkItem
                     .spkPhoto
                         .spkPhotoWr
-                            img(src="assets/spk/user.png")
+                            img(src="assets/spk/prudnikov.png")
                     .spkFio Прудников Кирилл
-                    //.spkPos Коммуникации Офиса<br>Agile-трансформации Сбера
+                    .spkPos Руководитель направления &laquo;Управление&raquo; в Skillbox
 
                 .spkItem
                     .spkPhoto
