--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -18,7 +18,7 @@
                                 img(width="40" height="40" alt="Бакурова Ангелина" src="assets/spk/user.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Бакурова Ангелина
-                                .pgmItemSpeakerPos Управляющий директор<br>Начальник Офиса Agile-трансформации, Сбер
+                                .pgmItemSpeakerPos Управляющий директор-начальник Офиса Agile-трансформации, Сбер
 
             .pgmItem
                 .pgmItemIco
@@ -37,7 +37,7 @@
                                 img(width="40" height="40"  src="assets/spk/user.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Мотина Юлия
-                                .pgmItemSpeakerPos Управляющий директор<br>Начальник Продуктового офиса, Сбер
+                                .pgmItemSpeakerPos Управляющий директор-начальник Продуктового офиса, Сбер
 
             .pgmItem
                 .pgmItemIco
@@ -68,6 +68,7 @@
                                     img(width="40" height="40" src="assets/spk/user.png")
                                 .pgmItemSpeakerName
                                     .pgmItemSpeakerFio Мотина Юлия
+                                    .pgmItemSpeakerPos Управляющий директор-начальник Продуктового офиса, Сбер
                         .pgmItemSpeaker
                                 .pgmItemSpeakerImg
                                     img(width="40" height="40" src="assets/spk/user.png")
@@ -199,7 +200,7 @@
                 .pgmItemTime 13:50 - 14:20
                 .pgmItemContent
                     .pgmItemTitle Сервис с нуля в большом банке: ожидания и реальность.
-                    .pgmItemSubTitle Мы развиваем самый большой подписочный сервис в России - Уведомления. Когда ежедневно отправляешь 300 млн. смс, а твоя аудитория - много миллионов человек, начинаешь смотреть на мир через призму масштабности. А что, если ты начнешь создание абсолютно нового, при этом платного сервиса, не имеющего аналогов на рынке?
+                    .pgmItemSubTitle Мы развиваем самый большой подписочный сервис в России — Уведомления.<br>Когда ежедневно отправляешь 300 млн. смс, а твоя аудитория — много миллионов человек, начинаешь смотреть на мир через призму масштабности.<br>А что, если ты начнешь создание абсолютно нового, при этом платного сервиса, не имеющего аналогов на рынке?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -218,7 +219,7 @@
                 .pgmItemTime 14:20 - 14:50
                 .pgmItemContent
                     .pgmItemTitle Импортозамещение за три месяца
-                    //.pgmItemSubTitle Благодаря этому докладу вы узнаете:<br>Как мозг считывает и воспринимает изменения. Почему он боится и как сделать так, чтобы древние части мозга не мешали инновациям. От чего зависит, как мозг воспринимает изменения и как модифицировать изменение чтобы его захотелось делать.
+                    .pgmItemSubTitle Расскажу, как быстро разработать замену сервисам Google и сократить t2m запуска рекламных кампаний. И как в разы увеличить конверсию, когда не хватает людей и денег
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -309,7 +310,7 @@
                 .pgmItemTime 16:30 - 17:00
                 .pgmItemContent
                     .pgmItemTitle Подходы к управлению образовательного продукта. Опыт руководителей в EdTech
-                    //.pgmItemSubTitle В рамках доклада поговорим о метриках качества в образовании, как взаимодействуют между собой и что показывают NPS и LTV и Transformation rate. Также изучим российских и зарубежных практик решения бизнес задач. На примере конкретных кейсов поймем, как выйти за рамки своей сферы деятельности и погрузиться в “полярные” отрасли для поиска новых решений
+                    .pgmItemSubTitle В рамках доклада поговорим о метриках качества в образовании, как взаимодействуют между собой и что показывают NPS и LTV и Transformation rate. Также изучим российских и зарубежных практик решения бизнес задач. На примере конкретных кейсов поймем, как выйти за рамки своей сферы деятельности и погрузиться в “полярные” отрасли для поиска новых решений
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
