Замена фото спикеров+добавлена Пинчук

--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -129,7 +129,7 @@
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
-                                img(width="40" height="40"  src="assets/spk/user.png")
+                                img(width="40" height="40"  src="assets/spk/pinchuk.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Пинчук Екатерина
                                 .pgmItemSpeakerPos Chief Product Officer, SberDevices, Сбер
