--- a/views/elems/spk.pug
+++ b/views/elems/spk.pug
@@ -90,7 +90,7 @@
                 .spkItem
                     .spkPhoto
                         .spkPhotoWr
-                            img(src="assets/spk/user.png")
+                            img(src="assets/spk/pinchuk.png")
                     .spkFio Пинчук Екатерина
                     .spkPos Chief Product Officer, SberDevices, Сбер
 
