Изменения в программе, изменение должности
Изменено название доклада Пинчук, его описание
Изменено название доклада Соколовой
Заменены тире и кавычки на спец символы html
Изменена должность Пинчук в программе и в спикерах

--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -124,15 +124,15 @@
                     </svg>
                 .pgmItemTime 12:10 - 12:40
                 .pgmItemContent
-                    .pgmItemTitle От идеи до масштабного запуска за 1 год
-                    //.pgmItemSubTitle В докладе расскажем, как устроено и работает комьюнити из 100+ Agile-коучей, а также поделимся, какие инструменты развития комьюнити работают в команде, которая уже применяла десятки разных инструментов много раз.
+                    .pgmItemTitle От идеи до масштабного запуска и выручки за 1 год
+                    .pgmItemSubTitle В докладе я расскажу, как мы:<br>- За 1 год построили полноценную CV-платформу<br>- Выпустили линейку из трех продуктов, на которых сразу же начали зарабатывать<br>- Нашли свою нишу, когда на рынке уже были конкуренты с 10-летним опытом<br>- Создавали идеи продуктов и проверяли гипотезы с нулевым вложением в разработку
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
                                 img(width="40" height="40"  src="assets/spk/pinchuk.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Пинчук Екатерина
-                                .pgmItemSpeakerPos Chief Product Officer, SberDevices, Сбер
+                                .pgmItemSpeakerPos СРО Layer SberDevices, Исполнительный директор, Сбер
 
             .pgmItem
                 .pgmItemIco
@@ -200,7 +200,7 @@
                 .pgmItemTime 13:50 - 14:20
                 .pgmItemContent
                     .pgmItemTitle Сервис с нуля в большом банке: ожидания и реальность.
-                    .pgmItemSubTitle Мы развиваем самый большой подписочный сервис в России — Уведомления.<br>Когда ежедневно отправляешь 300 млн. смс, а твоя аудитория — много миллионов человек, начинаешь смотреть на мир через призму масштабности.<br>А что, если ты начнешь создание абсолютно нового, при этом платного сервиса, не имеющего аналогов на рынке?
+                    .pgmItemSubTitle Мы развиваем самый большой подписочный сервис в России &ndash; Уведомления.<br>Когда ежедневно отправляешь 300 млн. смс, а твоя аудитория &ndash; много миллионов человек, начинаешь смотреть на мир через призму масштабности.<br>А что, если ты начнешь создание абсолютно нового, при этом платного сервиса, не имеющего аналогов на рынке?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -218,7 +218,7 @@
 
                 .pgmItemTime 14:20 - 14:50
                 .pgmItemContent
-                    .pgmItemTitle Импортозамещение за три месяца
+                    .pgmItemTitle Вендорозамещение за три месяца
                     .pgmItemSubTitle Расскажу, как быстро разработать замену сервисам Google и сократить t2m запуска рекламных кампаний. И как в разы увеличить конверсию, когда не хватает людей и денег
                     .pgmItemSpeakers
                         .pgmItemSpeaker
@@ -310,7 +310,7 @@
                 .pgmItemTime 16:30 - 17:00
                 .pgmItemContent
                     .pgmItemTitle Подходы к управлению образовательного продукта. Опыт руководителей в EdTech
-                    .pgmItemSubTitle В рамках доклада поговорим о метриках качества в образовании, как взаимодействуют между собой и что показывают NPS и LTV и Transformation rate. Также изучим российских и зарубежных практик решения бизнес задач. На примере конкретных кейсов поймем, как выйти за рамки своей сферы деятельности и погрузиться в “полярные” отрасли для поиска новых решений
+                    .pgmItemSubTitle В рамках доклада поговорим о метриках качества в образовании, как взаимодействуют между собой и что показывают NPS и LTV и Transformation rate. Также изучим российских и зарубежных практик решения бизнес задач. На примере конкретных кейсов поймем, как выйти за рамки своей сферы деятельности и погрузиться в &laquo;полярные&raquo; отрасли для поиска новых решений
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
