--- a/views/elems/spk.pug
+++ b/views/elems/spk.pug
@@ -92,7 +92,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/pinchuk.png")
                     .spkFio Пинчук Екатерина
-                    .spkPos Chief Product Officer, SberDevices, Сбер
+                    .spkPos СРО Layer SberDevices, Исполнительный директор, Сбер
 
                 .spkItem
                     .spkPhoto
