Исправление в описании доклада Прудникова

--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -310,7 +310,7 @@
                 .pgmItemTime 16:30 - 17:00
                 .pgmItemContent
                     .pgmItemTitle Подходы к управлению образовательного продукта. Опыт руководителей в EdTech
-                    .pgmItemSubTitle В рамках доклада поговорим о метриках качества в образовании, как взаимодействуют между собой и что показывают NPS и LTV и Transformation rate. Также изучим российских и зарубежных практик решения бизнес задач. На примере конкретных кейсов поймем, как выйти за рамки своей сферы деятельности и погрузиться в &laquo;полярные&raquo; отрасли для поиска новых решений
+                    .pgmItemSubTitle В рамках доклада поговорим о метриках качества в образовании, как взаимодействуют между собой и что показывают NPS и LTV и Transformation rate. Также изучим российские и зарубежные практики решения бизнес задач. На примере конкретных кейсов поймем, как выйти за рамки своей сферы деятельности и погрузиться в &laquo;полярные&raquo; отрасли для поиска новых решений
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
