Изменения в программе, добавление фото
Добавлены фото: Козлова, Мотиной, Поляк, Попова.
Большие изменения в программе: перестановка Кондрашёвой, Кеселя, Барышниковой. Есть изменения в формулировке описаний докладов.

--- a/views/elems/spk.pug
+++ b/views/elems/spk.pug
@@ -48,15 +48,15 @@
                 .spkItem
                     .spkPhoto
                         .spkPhotoWr
-                            img(src="assets/spk/user.png")
+                            img(src="assets/spk/kozlov.png")
                     .spkFio Козлов Дмитрий
-                    //.spkPos Должность
+                    .spkPos Директор акселерационных программ, Product.vision
 
                 .spkItem
                     .spkPhoto
                         .spkPhotoWr
                             img(src="assets/spk/kondrashova.png")
-                    .spkFio Кондрашева Анастасия
+                    .spkFio Кондрашова Анастасия
                     .spkPos Senior Product Manager, Авито
 
                 .spkItem
@@ -64,7 +64,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/kostin.png")
                     .spkFio Костин Никита
-                    //.spkPos Коммуникации Офиса<br>Agile-трансформации Сбера
+                    .spkPos Владелец продукта для проверки гипотез Discovery, Сбер; 
 
                 .spkItem
                     .spkPhoto
@@ -83,7 +83,7 @@
                 .spkItem
                     .spkPhoto
                         .spkPhotoWr
-                            img(src="assets/spk/user.png")
+                            img(src="assets/spk/motina.png")
                     .spkFio Мотина Юлия
                     .spkPos Управляющий директор-начальник Продуктового офиса, Сбер
 
@@ -97,9 +97,9 @@
                 .spkItem
                     .spkPhoto
                         .spkPhotoWr
-                            img(src="assets/spk/user.png")
+                            img(src="assets/spk/polyak.png")
                     .spkFio Поляк Алена
-                    //.spkPos Коммуникации Офиса<br>Agile-трансформации Сбера
+                    .spkPos CPO mos.ru, ДИТ
 
                 .spkItem
                     .spkPhoto
@@ -111,9 +111,9 @@
                 .spkItem
                     .spkPhoto
                         .spkPhotoWr
-                            img(src="assets/spk/user.png")
+                            img(src="assets/spk/popov.png")
                     .spkFio Попов Сергей
-                    //.spkPos Коммуникации Офиса<br>Agile-трансформации Сбера
+                    .pgmItemSpeakerPos директор дивизиона «Транзакционный бизнес» ПАО Сбербанк
 
                 .spkItem
                     .spkPhoto
@@ -127,7 +127,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/user.png")
                     .spkFio Серегина Елена
-                    //.spkPos Коммуникации Офиса<br>Agile-трансформации Сбера
+                    .spkPos Founder, DataLatte
 
                 .spkItem
                     .spkPhoto
