--- a/views/elems/player.pug
+++ b/views/elems/player.pug
@@ -7,3 +7,4 @@
                 .playerDescr Ежегодная конференция, посвященная практикам и трендам гибкого управления. В рамках нее делаются тематические доклады на актуальные темы, проводятся обучающие воркшопы, приглашаются знаменитые в сфере Agile эксперты.
             .videoWrapper
                 video#player.video-js.vjs-big-play-centered(controls playsinline poster="assets/poster.png")
+                    source(src="https://static.sber.link/video/2021/sbergile.m3u8" type="application/x-mpegURL")
