--- a/views/index.pug
+++ b/views/index.pug
@@ -64,8 +64,8 @@ block content
       }
       (()=>{
           let player=videojs("#player");
-          player.hlsQualitySelector({
-              displayCurrentQuality: true
-          });
+          //player.hlsQualitySelector({
+          //    displayCurrentQuality: true
+          //});
 
         })();
