--- a/html/assets/style.css
+++ b/html/assets/style.css
@@ -360,7 +360,7 @@ h2 {
 
 }
 
-.vjs-icon-placeholder {
+.vjs-big-play-button .vjs-icon-placeholder {
     width: 100%;
     height: 100%;
     background: linear-gradient(100.75deg, #00D900 -32.61%, #00D9FF 110.02%);
