Правки из Вотсаппа
Множество орфографических и пунктуационных ошибок

--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -74,7 +74,7 @@
                                     img(width="40" height="40" src="assets/spk/popov.png")
                                 .pgmItemSpeakerName
                                     .pgmItemSpeakerFio Попов Сергей
-                                    .pgmItemSpeakerPos Директор дивизиона «Транзакционный бизнес» ПАО Сбербанк
+                                    .pgmItemSpeakerPos Директор дивизиона &laquo;Транзакционный бизнес&raquo; ПАО Сбербанк
 
                         .pgmItemSpeaker
                                 .pgmItemSpeakerImg
@@ -133,7 +133,7 @@
                 .pgmItemTime 11:40 - 12:10
                 .pgmItemContent
                     .pgmItemTitle Как в рутине задач находить время на Disrupt
-                    .pgmItemSubTitle На живом примере продукта trade-in недвижимости я расскажу, что помогает команде Домклика быстро проверять гипотезы и не бояться отвергать их, а также поделюсь секретами как придумывать новые, подрывные решения и как находить время на Disrupt
+                    .pgmItemSubTitle На живом примере продукта trade-in недвижимости я расскажу, что помогает команде Домклика быстро проверять гипотезы и не бояться отвергать их, а также поделюсь секретами, как придумывать новые, подрывные решения и как находить время на Disrupt
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -171,7 +171,7 @@
                 .pgmItemTime 12:40 - 13:10
                 .pgmItemContent
                     .pgmItemTitle Как разработать успешную стратегию, которая поможет развивать продукт. И которую будет не стыдно показать =)
-                    .pgmItemSubTitle В своем докладе я расскажу, как построить успешную стратегию развития продукта, какие метрики использовать, как декомпозировать ее до задач и самое главное как на нее влияет клиент.
+                    .pgmItemSubTitle В своем докладе я расскажу, как построить успешную стратегию развития продукта, какие метрики использовать, как декомпозировать ее до задач и самое главное, как на нее влияет клиент.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -226,8 +226,8 @@
 
                 .pgmItemTime 13:50 - 14:20
                 .pgmItemContent
-                    .pgmItemTitle Сервис с &laquo;нуля&raquo; в большом банке: ожидания и реальность.
-                    .pgmItemSubTitle Мы развиваем самый большой подписочный сервис в России &ndash; Уведомления.<br>Когда ежедневно отправляешь 300 млн. смс, а твоя аудитория &ndash; много миллионов человек, начинаешь смотреть на мир через призму масштабности. А что, если ты начнешь создание абсолютно нового, при этом платного сервиса, не имеющего аналогов на рынке?
+                    .pgmItemTitle Сервис с &laquo;нуля&raquo; в большом банке: ожидания и реальность
+                    .pgmItemSubTitle Мы развиваем самый большой подписочный сервис в России &ndash; Уведомления.<br>Когда ежедневно отправляешь 300 млн смс, а твоя аудитория &ndash; много миллионов человек, начинаешь смотреть на мир через призму масштабности. А что, если ты начнешь создание абсолютно нового, при этом платного сервиса, не имеющего аналогов на рынке?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -266,7 +266,7 @@
                 .pgmItemTime 14:50 - 15:20
                 .pgmItemContent
                     .pgmItemTitle Как не терять деньги на внутренних продуктах/Внутренние продукты: нужен ли вам в зоопарке такой зверь
-                    .pgmItemSubTitle Внутренние продукты &laquo;пилят&raquo; практически все, но очень мало об этом говорят. Мы поговорим о основных вопросах, который волнует всех продактов внутренних продуктов и их заказчиков:<br>- Должна ли разработка внутреннего продукта отличаться от разработки внешнего?<br>- Как работать с метриками и фреймворками?<br>- Как развивать себя как PM’a внутреннего продукта?
+                    .pgmItemSubTitle Внутренние продукты &laquo;пилят&raquo; практически все, но очень мало об этом говорят. Мы поговорим об основных вопросах, которые волнуют всех продактов внутренних продуктов и их заказчиков:<br>- Должна ли разработка внутреннего продукта отличаться от разработки внешнего?<br>- Как работать с метриками и фреймворками?<br>- Как развивать себя как PM’a внутреннего продукта?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -292,7 +292,7 @@
                                 img(width="40" height="40" src="assets/spk/sokolova.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Соколова Юлия
-                                .pgmItemSpeakerPos IT лидер разработки сервисов для маркетологов, Сбер
+                                .pgmItemSpeakerPos IT-лидер разработки сервисов для маркетологов, Сбер
 
 
             .pgmItem
@@ -336,7 +336,7 @@
                 .pgmItemTime 16:30 - 17:00
                 .pgmItemContent
                     .pgmItemTitle Подходы к управлению образовательного продукта. Опыт руководителей в EdTech
-                    .pgmItemSubTitle В этом докладе мы поговорим о метриках качества в образовании - что показывают NPS, LTV и Transformation rate, и как они между собой связаны. Также изучим российскую и зарубежную практики решения бизнес задач, а на примере конкретных кейсов увидим, как выйти за рамки своей сферы деятельности и погрузиться в &laquo;полярные&raquo; отрасли для поиска новых решений.
+                    .pgmItemSubTitle В этом докладе мы поговорим о метриках качества в образовании - что показывают NPS, LTV и Transformation rate, и как они между собой связаны. Также изучим российскую и зарубежную практики решения бизнес-задач, а на примере конкретных кейсов увидим, как выйти за рамки своей сферы деятельности и погрузиться в &laquo;полярные&raquo; отрасли для поиска новых решений.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -356,7 +356,7 @@
 
                 .pgmItemTime 17:00 - 17:30
                 .pgmItemContent
-                    .pgmItemTitle UX-исследования при разработке продукта: барьеры VS реальность
+                    .pgmItemTitle UX-исследования при разработке продукта: барьеры VS. реальность
                     .pgmItemSubTitle Работая над продуктом, команда выводит много новых фич. Когда же возникает необходимость проводить исследования, встает множество вопросов: «Кто должен проводить исследования?», «Как найти время у команды?», «Зачем исследования, если продукт работает?» и другие. В открытом диалоге Владелец продукта и UX-исследователь расскажут о барьерах, которые возникают на пути к проведению исследований, и способах их преодоления.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
@@ -383,7 +383,7 @@
                 .pgmItemTime 17:30 - 18:00
                 .pgmItemContent
                     .pgmItemTitle Продуктовая стратегия на примере запуска страхового продукта Защита 360°
-                    .pgmItemSubTitle В своем выступлении я расскажу про опыт разработки продуктовой стратегии на примере создания онлайн продукта корпоративного страхования: от идеи к реализации за 3 месяца. Вместе с вами мы рассмотрим продуктовые метрики, зачем нужен helicopter view, поговорим про важность CustDev, генерацию гипотез, их проверку, а также про UX/UI-исследования.
+                    .pgmItemSubTitle В своем выступлении я расскажу про опыт разработки продуктовой стратегии на примере создания онлайн-продукта корпоративного страхования: от идеи к реализации за 3 месяца. Вместе с вами мы рассмотрим продуктовые метрики, зачем нужен helicopter view, поговорим про важность CustDev, генерацию гипотез, их проверку, а также про UX/UI-исследования.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
