--- a/views/elems/spk.pug
+++ b/views/elems/spk.pug
@@ -64,7 +64,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/kostin.png")
                     .spkFio Костин Никита
-                    .spkPos Владелец продукта для проверки гипотез Discovery, Сбер; 
+                    .spkPos Владелец продукта для проверки гипотез Discovery, Сбер
 
                 .spkItem
                     .spkPhoto
@@ -113,7 +113,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/popov.png")
                     .spkFio Попов Сергей
-                    .pgmItemSpeakerPos директор дивизиона «Транзакционный бизнес» ПАО Сбербанк
+                    .pgmItemSpeakerPos Директор дивизиона &laquo;Транзакционный бизнес&raquo; ПАО Сбербанк
 
                 .spkItem
                     .spkPhoto
@@ -134,7 +134,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/sokolova.png")
                     .spkFio Соколова Юлия
-                    .spkPos IT лидер разработки сервисов для&nbsp;маркетологов, Сбер
+                    .spkPos IT-лидер разработки сервисов для&nbsp;маркетологов, Сбер
 
                 //.spkItem
                     .spkPhoto
