--- a/views/elems/footer.pug
+++ b/views/elems/footer.pug
@@ -7,10 +7,10 @@
                     .footerRowDescr Телефон для звонков из любой точки мира
                 .footerRow
                     .footerRowText 900
-                    .footerRowDescr Бесплатно с мобильного на территории РФ
+                    .footerRowDescr Бесплатно с мобильного телефона на территории РФ
             .footerItem
                 .footerRRow(onclick="window.open('http://www.sberbank.ru/ru/personal_policy')") Согласие на обработку персональных данных
                 .footerRRow(onclick="window.open('https://www.sberbank.ru/ru/inform')") Информация, обязательная к размещению
-                .footerRRow(onclick="window.open('https://www.sberbank.ru/ru/disclosure3921u')") Раскрытие информации в банке как профессиональном участнике рынка ценных бумаг
+                .footerRRow(onclick="window.open('https://www.sberbank.ru/ru/disclosure3921u')") Раскрытие информации о банке, как о профессиональном участнике рынка ценных бумаг
         .footerBody Сбер.ру © 1997-2022 ПАО Сбербанк. Генеральная лицензия на осуществления банковских операций от 11 августа 2015 года. Регистрационный номер — 1481.
 
