Добавление фото, замена спикера, изменения в программе
Добавлены Фото Бакуровой и Попко

Изменено несколько должностей

Заменена Серегина на Пустовита

--- a/views/elems/player.pug
+++ b/views/elems/player.pug
@@ -4,7 +4,7 @@
             .playerHead
                 .playerTitle Sbergile
                     span Talks
-                .playerDescr Ежегодная конференция, посвященная практикам и трендам гибкого управления. В рамках нее делаются тематические доклады на актуальные темы, проводятся обучающие воркшопы, приглашаются знаменитые в сфере Agile эксперты.
+                .playerDescr Ежегодная конференция Сбера об актуальных практиках управления продуктом. <br><br>Мы поговорим про секреты успешной стратегии продукта, работу с гипотезами и метриками, проведение пользовательских исследований, а также про то, как продуктовые практики позволяют создать лучший клиентский опыт.
             .videoWrapper
                 video#player.video-js.vjs-big-play-centered(controls playsinline poster="assets/poster.png")
                     source(src="https://static.sber.link/video/2021/sbergile.m3u8" type="application/x-mpegURL")
