--- a/views/elems/spk.pug
+++ b/views/elems/spk.pug
@@ -13,7 +13,7 @@
                 .spkItem
                     .spkPhoto
                         .spkPhotoWr
-                            img(src="assets/spk/user.png")
+                            img(src="assets/spk/bakurova.png")
                     .spkFio Бакурова Ангелина
                     .spkPos Управляющий директор-начальник Офиса Agile-трансформации, Сбер
 
@@ -71,7 +71,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/kyzmin.png")
                     .spkFio Кузьмин Михаил
-                    .spkPos Владелец продукта, Сбер
+                    .spkPos Владелец продукта Открытый Диалог и Сберкрафт, Сбер
 
                 .spkItem
                     .spkPhoto
@@ -104,9 +104,9 @@
                 .spkItem
                     .spkPhoto
                         .spkPhotoWr
-                            img(src="assets/spk/user.png")
+                            img(src="assets/spk/popko.png")
                     .spkFio Попко Павел
-                    //.spkPos Коммуникации Офиса<br>Agile-трансформации Сбера
+                    .spkPos Ведущий аналитик команды &laquo;Особенный банк для людей с инвалидностью&raquo;, Дивизион &laquo;Особенные решения&raquo;, незрячий эксперт по цифровой доступности, Сбер
 
                 .spkItem
                     .spkPhoto
@@ -123,6 +123,13 @@
                     .spkPos Руководитель направления &laquo;Управление&raquo; в Skillbox
 
                 .spkItem
+                    .spkPhoto
+                        .spkPhotoWr
+                            img(src="assets/spk/user.png")
+                    .spkFio Пустовит Александр
+                    .spkPos Партнер в Product.Vision
+
+                //.spkItem
                     .spkPhoto
                         .spkPhotoWr
                             img(src="assets/spk/user.png")
