--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -86,7 +86,7 @@
                 .pgmItemTime 11:10 - 11:40
                 .pgmItemContent
                     .pgmItemTitle От Run к Change. Четыре уровня работы над продуктом.
-                    .pgmItemSubTitle Поговрим про то, в каких случах стоит применять продуктовый подход, а когда он не нужен. Расскажу про 4 уровня работы над продуктом, и про то, что необходимо на каждом их этих уровней. Разберем, где чаще всего случаются проблемы и почему.
+                    .pgmItemSubTitle Поговорим про то, в каких случах стоит применять продуктовый подход, а когда он не нужен. Расскажу про 4 уровня работы над продуктом, и про то, что необходимо на каждом их этих уровней. Разберем, где чаще всего случаются проблемы и почему.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
