--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -22,7 +22,7 @@
 
             .pgmItem
                 .pgmItemIco
-                    include ../svg/s1.svg
+                    include ../svg/mic.svg
                 .pgmItemTime 10:05 - 10:15
                 .pgmItemContent
                     .pgmItemTitle Доклад
@@ -82,7 +82,7 @@
 
             .pgmItem
                 .pgmItemIco
-                    include ../svg/s1.svg
+                    include ../svg/mic.svg
                 .pgmItemTime 11:10 - 11:40
                 .pgmItemContent
                     .pgmItemTitle От Run к Change. Четыре уровня работы над продуктом.
@@ -116,7 +116,7 @@
 
             .pgmItem
                 .pgmItemIco
-                    include ../svg/s1.svg
+                    include ../svg/mic.svg
 
                 .pgmItemTime 11:40 - 12:10
                 .pgmItemContent
@@ -132,7 +132,7 @@
 
             .pgmItem
                 .pgmItemIco
-                    include ../svg/s1.svg
+                    include ../svg/mic.svg
                 .pgmItemTime 12:10 - 12:40
                 .pgmItemContent
                     .pgmItemTitle От идеи до масштабного запуска и выручки за 1 год
@@ -147,7 +147,7 @@
 
             .pgmItem
                 .pgmItemIco
-                    include ../svg/s1.svg
+                    include ../svg/mic.svg
                 .pgmItemTime 12:40 - 13:10
                 .pgmItemContent
                     .pgmItemTitle Как разработать успешную стратегию, которая поможет развивать продукт. И которую будет не стыдно показать =)
@@ -175,7 +175,7 @@
 
             .pgmItem
                 .pgmItemIco
-                    include ../svg/s2.svg
+                    include ../svg/mic.svg
 
                 .pgmItemTime 13:20 - 13:50
                 .pgmItemContent
@@ -194,7 +194,7 @@
 
             .pgmItem
                 .pgmItemIco
-                    include ../svg/s2.svg
+                    include ../svg/mic.svg
 
                 .pgmItemTime 13:50 - 14:20
                 .pgmItemContent
@@ -210,7 +210,7 @@
 
             .pgmItem
                 .pgmItemIco
-                    include ../svg/s2.svg
+                    include ../svg/mic.svg
 
                 .pgmItemTime 14:20 - 14:50
                 .pgmItemContent
@@ -226,7 +226,7 @@
 
             .pgmItem
                 .pgmItemIco
-                    include ../svg/s2.svg
+                    include ../svg/mic.svg
                 .pgmItemTime 14:50 - 15:20
                 .pgmItemContent
                     .pgmItemTitle Как не терять деньги на внутренних продуктах/Внутренние продукты: нужен ли вам в зоопарке такой зверь
@@ -241,7 +241,7 @@
 
             .pgmItem
                 .pgmItemIco
-                    include ../svg/s2.svg
+                    include ../svg/mic.svg
                 .pgmItemTime 15:20 - 15:50
                 .pgmItemContent
                     .pgmItemTitle Вендорозамещение за три месяца
@@ -269,7 +269,7 @@
 
             .pgmItem
                 .pgmItemIco
-                    include ../svg/s3.svg
+                    include ../svg/mic.svg
                 .pgmItemTime 16:00 - 16:30
                 .pgmItemContent
                     .pgmItemTitle Ценность метрик
@@ -284,7 +284,7 @@
 
             .pgmItem
                 .pgmItemIco
-                    include ../svg/s3.svg
+                    include ../svg/mic.svg
                 .pgmItemTime 16:30 - 17:00
                 .pgmItemContent
                     .pgmItemTitle Подходы к управлению образовательного продукта. Опыт руководителей в EdTech
@@ -299,7 +299,7 @@
 
             .pgmItem
                 .pgmItemIco
-                    include ../svg/s3.svg
+                    include ../svg/mic.svg
                 .pgmItemTime 17:00 - 17:30
                 .pgmItemContent
                     .pgmItemTitle UX-исследования при разработке продукта: барьеры VS. реальность
@@ -321,7 +321,7 @@
 
             .pgmItem
                 .pgmItemIco
-                    include ../svg/s3.svg
+                    include ../svg/mic.svg
                 .pgmItemTime 17:30 - 18:00
                 .pgmItemContent
                     .pgmItemTitle Продуктовая стратегия на примере запуска страхового продукта Защита 360°
